# slytherin_dagger

./: CMakeLists.txt  LICENSE  README.md  package.xml  snake_control.launch  snake_training.launch
Matlab_simulator_codes/: 20141126T135918.mat  20141126T140317.mat  20141126T144125.mat  TimeStamp.m  adderror.m  computeLinkNormals.m  computeSnakePoints.m  computeStateFeatures.m  construct_ctrl_msg.m  correctSteering.m  distance2obstacle.m  drawLink.m  drawLinkSkeleton.m  drawState.m  findFilledVoxelsAndRender.m  findvoxelsinbox.m  generateLinkSteeringFigure.m  get_expert_cmd.m  getkey.asv  getkey.m  heart.SLDPRT  heart.STL  linear_predictor.m  loadLoggedData.m  loadTrailPoints.m  main_matlab_ros.asv  main_matlab_ros.m  main_matlab_standalone.asv  main_matlab_standalone.m  minboundbox.m  obstacle.STL  pithyawtoaxisangle.m  plot_currentstate.asv  plot_currentstate.m  plot_currentstate_simple.m  plot_currentstate_video.m  plot_dirlines.m  predictSteering.m  publish_feat_action_matrix.m  render_heart.m  (+19 more)
Simulation_bags/: it0_training_bagfiles.txt  it0_training_bagfiles.txt~  it1_testing_bagfiles.txt  it1_testing_bagfiles.txt~  it1_training_bagfiles.txt  it1_training_bagfiles.txt~  it2_testing_bagfiles.txt  it2_training_bagfiles.txt  it2_training_bagfiles.txt~  it3_training_bagfiles.txt  it3_training_bagfiles.txt~  it4_testing_bagfiles.txt  it4_testing_bagfiles.txt~  it4_training_bagfiles.txt  it4_training_bagfiles.txt~
Simulation_material/: Initial_Setting.fig  Initial_Setup_Rendered.tif  Initial_Setup_Voxelized.tif  dagger_simul_traj_it1_112.mp4.avi  dagger_simul_traj_it5_733.mp4.avi  dagger_simul_traj_it5_739.mp4.avi  dagger_simul_traj_it5_739.tif  expert_simul_traj_it0_312.mp4.avi  initial_Setting_lite.fig  it0_example_trajectory.fig  it0_example_trajectory2.fig
Videos/: expert_simul_traj.avi
launch/: dagger_joystick.launch  feature_saver.launch  gscam_nodelet.launch  logitech_extreme_3d_pro_direct.launch  snake_training.launch
nodes/: bag_file_saver.py  controller.py  feature_generator.py  feature_saver.py  findholecentre.py  joystick_node.cpp  matlab_controller_node.py  simulation_bag_saver.py  train.py  (+3 more)
(+163 files in other folders)
